# StallmansDiscord

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
stallmansdiscord/: client.py  config.py  main.py
